fix scrollbar overflow

--- a/styles/app/common/form.module.css
+++ b/styles/app/common/form.module.css
@@ -1,6 +1,6 @@
 .videoForm {
 	z-index: 10;
-	overflow: scroll;
+	overflow-y: scroll;
 
 	label {
 		margin-bottom: 10px;
